@@ -1,7 +1,7 @@
-DIST epson-inkjet-printer-escpr2-1.1.41-1lsb3.2.i486.rpm 3053704 BLAKE2B 1a3c45f520b18a65c4998d1d3a0786a09047dd50fd8f485c5cc721deba1f2fad375e3f4c629f478ad633b36d7f416920ce899f15b22fd44f1d52a61005d6169d SHA512 6919ae54421a139096617842fb6f81e20ab102aadbc0c60a9f548719b10758de2223779cc8cae21f17b45912ea0bea3218bbd3330c7733bcb4ccd37eb20844aa
-DIST epson-inkjet-printer-escpr2-1.1.41-1lsb3.2.x86_64.rpm 3053166 BLAKE2B e7a8f087f2388808a81e429a03a95991122135e47ea27b31a8a9ded2877cf1f737ccf68c34055945cee9e23da9621d72c98461e3c9c0ef085f1f842691a3cfef SHA512 5b8dda031e3580965820b5b4cc1c6ba78d2958ec2269b2c08e6a3d13c92da7f19c4cb3d0e2144a1c2c02175a18e283c4a5d4dc1f0572aa3756f755459aac686e
 DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.i486.rpm 3070432 BLAKE2B e0749201a64b0602ced1a6aa895a6d4d042c9dd93ea2f12ee3d74ebe41f776d6940ec51d35bf78e271eeb1514a0de832154f37d87a78dc8b3afc3fa325c159be SHA512 d08d2148a9199e345e1986d59a33070c2a8ea85de7dcb71c05a809740793744b91af56203f5815a9adcf1a7763887afb203c0190d49ecaa4316c398d82776c91
 DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.x86_64.rpm 3069894 BLAKE2B e4dc39a548c2c97e9b13a542600c14f41257d850685c732dbc61797049d5e577e23127243e20750e4957610f86809546e2bdb267e8c4939334b8413217ae47eb SHA512 f08c6a45117c12cad1860cef707c6b53416ca21ddc3e180a10459ac5d344e3467d3a9340b61966670f0c3d1e038751a9e492891bc061078dbfcd453fe78a60a0
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.41.ebuild 1670 BLAKE2B 9e2f1280f8c1bc3b92be598ed76011dcc457b546b94a961eb4f7c22ec71ee88ae982d4df8678fd2664b87ddc293ef3692edf5cac65a5f61803ce0c90c1e513f8 SHA512 cfdf2323fbd6fd0f7d7eafef2abfbf32bf96428fad8dacc4f9674e398e8188bf57a8ff9e5016e9a3ee2e431b394511a3183acf8f71b28ab33d45414e8ff680c8
+DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.i486.rpm 3159861 BLAKE2B bd03ea6081f654bb2a30c7906f45412d2f022d339e37dc1b3983fb57d9ef386ae66f7d04bd099ade86bf0996dd9c1a8d8eb171ab1d32ac90473fc5fd898f22c9 SHA512 5e1dff186a5b7134a2611808ec80fef9465f85454c14b6329a38f4e17a26476170245d18d23816117d6e24f88301b8ec4f8797d8a0981a8a7050de590642f70a
+DIST epson-inkjet-printer-escpr2-1.1.43-1lsb3.2.x86_64.rpm 3159385 BLAKE2B 65e7ad831572ed11b408f8c2d2fc730620c10156503b0c0815ee1df52a8bb4acdcd9a30956d0b4762fb957d68f56e97cfee97a335c0fa7714dceda998f065d75 SHA512 4bdafdb77f8f3eb1e6cd9a5a34bb25cc8f8003f720bfe9d5bf232003b8d1ac07d1eb8465768f58b0ca9cbf1794f35558a20297dbcabcda70b0801a10705e8324
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.42.ebuild 1670 BLAKE2B 75d310b750f8124947d8238f711e4117af5aa772b8ee28591ab385f96a56e31e8d440ae838c12d928e203df512a2ecb908a19b6508f4db7fc01866d824b66a10 SHA512 a4c9271c9fe0c7b9bdd274f8cd5664636e632d21c24b012a4b256d54706393ee8b5f3328ab3509074eaeb7fa3909c41fa4b61797f7cdc709aecbe9b3e0043872
+EBUILD epson-inkjet-printer-escpr2-bin-1.1.43.ebuild 1670 BLAKE2B dbfa7fd72cbb83034962b51c66e1040c95e7772fddfbd4b0166801399c6847da867d1e1fd6daf53ad9040ce4664ba088bac888ef15b5bdf5b99fe155ecb1f541 SHA512 df066bffef2564e8a0bcdb907eb7b33800cd2bfdcdca0c3be983ccd20d7c63944b17a4a823e257b2d07d4431e9c1739cf8f696dee8872f0792203551e14694e0
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
