@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.41.tar.gz 4326859 BLAKE2B 8ae31c2bfd1288a4327a0c84785aef36522559b607eb77516cd834f5c4b6e02333df272b98a2c99c1bfcf2c26f5364437b046fc0cf0445a90476e289f4887755 SHA512 23b75092fbc2292e1bf0151aa5dbb2a794f335111cf4a5e4a2f7a19759275919e37c38a9c9cbd41dab764390de65eb5d8d8baaa86b351685e67093afc8cd80fd
 DIST epson-inkjet-printer-escpr2-1.1.42.tar.gz 4367304 BLAKE2B 71921bfcb10789e1244bb698e436d17da310e9c55897c65f97a13b3364628de41cc68a55afedd6b007dbe3cac52002890102086d4ed58e50d76877d3e69d2d35 SHA512 8476589a653837c4b125b064ba417b29747d73ec4868aa2dc33c0986bd1743570698b4d5cd8f2bb6f9c488737cf61992f54c42f269fd2b949f1edb190cc96af4
-EBUILD epson-inkjet-printer-escpr2-1.1.41.ebuild 1319 BLAKE2B ab7e360931ce2a23de13c52c5c5e20f1283ca0b45f673d23c317cd300df62462bbbf923857ebfc2df6d002774015eeb193f6af2ba575530f026f0e7e505a96bf SHA512 0e321b71c0f011d24df7f1bd09bea2f34b7054bad0c20977152ba759ece9ea7a07a35ac3e1b3a2b506f041be5afb81c97b5c35825024366ba6ad53a71a672647
+DIST epson-inkjet-printer-escpr2-1.1.43.tar.gz 4432118 BLAKE2B 074fac7ea38df6f640cc2578aa2d4a510c5a23e727d131fc95e4730af4f89d6b7b74d01e25d5bb92fb85853cc017f2ba4a01ff6c07bf01876de61bf62173ac48 SHA512 2e4482624cb63cbb22be947b8738a62bedec5f47bc1b68c65249c8a579168d9e907848b6529952a760919cab2711c10882c13a9241e432b129c9ea46f2964786
 EBUILD epson-inkjet-printer-escpr2-1.1.42.ebuild 1319 BLAKE2B cf6bfecc81af1ad8d02ef641e68c744fbeba1cc3298fa6a7ce2254a890c52ffa1dae297bf769142ceb5fb4f0decbb31962a9e08bbfce65f31325fac8d86f4ec3 SHA512 ad55c3b9fd936c680ce27737173659419246010f94838580385c2294636571dfa16bc7aa544ec2efe13babfa864af60c2920c1d1fa9c86a3da032fd7874095d2
+EBUILD epson-inkjet-printer-escpr2-1.1.43.ebuild 1319 BLAKE2B a015a5e288db8d7a28e761d8f98814b85de96f2f1c07ccef06d887ead99d3da8571c2feb0d9361046824ce651172ccf80b8d489d6df0d58985e09e2a39db686e SHA512 1f6f76336cc0c25e23b9162c5ec2e7f8c4e2505ce48a4b99912fcd47f7b716a92396f7a3c8881a32d93c600bb817cb4bf5f64b72c0b2d4a276951dbc45eb4c6f
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
