@@ -1,6 +1,16 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.43                        (2021-10-29)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.42.1                      (2021-10-01)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.1.42                        (2021-09-02)
 ----------------------------------------------------------------------
  * Supported new models
